fix: Menu collapsed, hidden part is interacted

--- a/themes/components/menu.less
+++ b/themes/components/menu.less
@@ -152,6 +152,7 @@
           font-size: 17px;
         }
         .h-menu-show-desc {
+          visibility: visible;
           opacity: 0;
           // position: absolute;
           display: inline-block;
